# PR-Diff-Ingestion

./: .gitignore  .pre-commit-config.yaml  API_USAGE.md  Makefile  README.md  api_response.json  output1.json  p1-diff.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_api.py  test_api_request.json  userGuide.md
scripts/: start_api.py  test_install.py
src/p1diff/: __init__.py  caps.py  config.py  diffpack.py  errors.py  logging_utils.py  main.py  policies.py  serialize.py  settings.py  vcs.py
src/p1diff/api/: __init__.py  app.py  models.py  service.py
src/p1diff/api/routes/: __init__.py  diff.py  meta.py
src/p1diff/api/services/: __init__.py  diff.py
tests/: __init__.py  conftest.py  test_caps.py  test_config.py  test_critical_fixes.py  test_diffpack.py  test_integration.py  test_main.py  test_policies.py  test_serialize.py
tests/api/: test_app.py
